--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Reference Specs for the Thingy:52 REST API</title>
   <link rel="stylesheet" href="css/mocha.css" />
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="icon" href="https://diuf.unifr.ch/drupal/softeng/sites/diuf.unifr.ch.drupal.softeng/files/softengfavicon.ico" />
 </head>
 <body>
   <section id="target-chooser">
