Change api url placeholder

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <section id="target-chooser">
     <div class="wrapper">
       <label for="target-root-url">test target root</label>
-      <input id="target-root-url" placeholder="e.g. http://my-api.example.com/api/v1"></input>
+      <input id="target-root-url" placeholder="e.g. http://api.thing.zone"></input>
     </div>
     <button>run tests</button>
   </section>
